Crash - new file browser #69791

Closed
opened 2019-09-12 11:57:13 +02:00 by Jurek · 8 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15

Blender Version
Broken: version: 2.81 (sub 10), branch: master, commit date: 2019-09-12 09:34, hash: 492a7998d5
Worked: 2.80

Short description of error
in my file, after opening the File Browser instant crash occours before loading the UI.

The crash doesn't happen when manually changing an editor to a file browser, but this way I can't save or open anything.

Here is a simplified file with this bug. I was able to make it using 2.80 as 2.81 gave me crash all the time.
save as crash.blend

Exact steps for others to reproduce the error

  1. Open attached file
  2. try to open any other file or "save as"

have a nice day

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15 **Blender Version** Broken: version: 2.81 (sub 10), branch: master, commit date: 2019-09-12 09:34, hash: `492a7998d5` Worked: 2.80 **Short description of error** in my file, after opening the File Browser instant crash occours before loading the UI. The crash doesn't happen when manually changing an editor to a file browser, but this way I can't save or open anything. Here is a simplified file with this bug. I was able to make it using 2.80 as 2.81 gave me crash all the time. [save as crash.blend](https://archive.blender.org/developer/F7738970/save_as_crash.blend) **Exact steps for others to reproduce the error** 1. Open attached file 2. try to open any other file or "save as" have a nice day
Author

Added subscriber: @solartistic

Added subscriber: @solartistic
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Julian Eisel was assigned by Philipp Oeser 2019-09-12 15:07:19 +02:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Crashes here (where file_tool_props_region(sa) cannot create region_props -- returns NULL)

1 file_refresh                         space_file.c      301 0x7b2d594 
2 ED_area_do_refresh                   area.c            183 0x3c7b986 
3 wm_event_do_refresh_wm_and_depsgraph wm_event_system.c 390 0x3165fb4 
4 wm_event_do_notifiers                wm_event_system.c 560 0x316672d 
5 WM_main                              wm.c              420 0x3161166 
6 main                                 creator.c         491 0x2b0e6e6 

No problem btw if you load the File with Load UI unchecked (but that is expected I guess...)
Not sure how this file got into this situation, but I consider this High prio for the time being...

@JulianEisel : mind checking?

Crashes here (where `file_tool_props_region(sa)` cannot create `region_props` -- returns NULL) ``` 1 file_refresh space_file.c 301 0x7b2d594 2 ED_area_do_refresh area.c 183 0x3c7b986 3 wm_event_do_refresh_wm_and_depsgraph wm_event_system.c 390 0x3165fb4 4 wm_event_do_notifiers wm_event_system.c 560 0x316672d 5 WM_main wm.c 420 0x3161166 6 main creator.c 491 0x2b0e6e6 ``` No problem btw if you load the File with `Load UI` unchecked (but that is expected I guess...) Not sure how this file got into this situation, but I consider this High prio for the time being... @JulianEisel : mind checking?
Member

Okay, this is quite a corner case. Found a way to reproduce it from factory settings:

  • Open an older Blender version (from before the new file browser)
  • F12 to get the temporary render window opened
  • Change the Image Editor to a File Browser and back
  • Save the file
  • Open it in new Blender with the new file browser
  • Open a file browser
  • Crash.

Okay, this is quite a corner case. Found a way to reproduce it from factory settings: * Open an older Blender version (from before the new file browser) * F12 to get the temporary render window opened * Change the Image Editor to a File Browser and back * Save the file * Open it in new Blender with the new file browser * Open a file browser - > Crash.

This issue was referenced by 914f4308fb

This issue was referenced by 914f4308fb828941436c1ecfb4a58b18017fbd1c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69791
No description provided.